<resources>
    <string name="app_name">Swoosh</string>
    <string name="s_background_image">background image</string>
    <string name="s_go_all_in">GO ALL IN</string>
    <string name="s_on_going_all_out">ON GOING ALL OUT</string>
    <string name="s_find_a_team_in_your_city_and_dominate_the_league">Find a team in your city, and dominate the
        league.
    </string>
    <string name="s_get_started">GET STARTED</string>
    <string name="s_swoosh_logo">swoosh logo</string>
    <string name="s_desired_league">Desired League:</string>
    <string name="s_next">NEXT</string>
    <string name="s_mens">Mens</string>
    <string name="s_womens">Womens</string>
    <string name="s_co_ed">Co-ed</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">FINISH</string>
    <string name="exercise_image_view">exercise image view</string>
    <string name="looking_for_a_co_ed_beginner_league_near_you">Looking for a $%s $%s league near you…</string>
</resources>
