<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/s_background_image"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView4" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:scaleType="fitCenter" android:contentDescription="@string/s_swoosh_logo"/>
    <TextView
            android:text="@string/s_desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.501"/>
    <Button
            android:text="@string/s_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/next" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3" android:background="@drawable/swoosh_button"
            android:textColor="@android:color/white" android:fontFamily="@font/montserrat"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4">
        <ToggleButton
                android:text="@string/s_mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="207dp"
                android:id="@+id/toggleButton3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:checked="false" android:layout_marginTop="8dp" android:textColor="@android:color/white"
                android:fontFamily="@font/montserrat" android:textOff="@string/s_mens" android:textOn="@string/s_mens"
                android:background="@drawable/swoosh_toggle" android:textAllCaps="false"/>
        <ToggleButton
                android:text="@string/s_womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="207dp"
                android:id="@+id/toggleButton2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:checked="false" android:layout_marginTop="16dp" android:textOff="@string/s_womens"
                android:textOn="@string/s_womens" android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white" android:fontFamily="@font/montserrat"
                android:layout_marginBottom="16dp" android:textAllCaps="false"/>
        <ToggleButton
                android:text="@string/s_co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="207dp"
                android:id="@+id/toggleButton" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:checked="false" android:layout_marginTop="8dp" android:textOff="@string/s_co_ed" android:textOn="@string/s_co_ed"
                android:layout_marginBottom="8dp" android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white" android:fontFamily="@font/montserrat"
                android:textAllCaps="false"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>